<resources>
    <string name="app_name">Doctor_Platform</string>
    <string name="but1">打開地圖</string>
    <string name="ic_exit">提交</string>
    <string name="item1">Home</string>
    <string name="item2">Find</string>
    <string name="item3">Map</string>
    <string name="item4">Set</string>
    <string name="crime_title_hint">Enter a title for this crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved?</string>
    <string name="internal_medicine_button">内 科</string>
    <string name="Surgery_button">外 科</string>
    <string name="OGD_button">妇产科</string>
    <string name="Pediatrics_button">儿 科</string>
    <string name="search_edit">请输入要搜索的内容</string>
    <string name="search_button">搜 索</string>
    <string name="children_category_button">儿童类</string>
    <string name="gynecology">妇科类</string>
    <string name="andrology">男科类</string>
    <string name="elderly">老年类</string>
    <string name="push_text">消息推送</string>
    <string name="name">name</string>
    <string name="address">address</string>
</resources>
