<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <Button
        android:id="@+id/internal_medicine"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/internal_medicine_button" />

    <TextView
        android:layout_width="30dp"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/Surgery"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/Surgery_button" />

    <TextView
        android:layout_width="30dp"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/OGD_Button"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/OGD_button" />

    <TextView
        android:layout_width="30dp"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/Pediatrics"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/Pediatrics_button" />

</LinearLayout>